Set up login n logout views

--- a/python3/django-projects/BlogProject/posts/templates/posts/list.html
+++ b/python3/django-projects/BlogProject/posts/templates/posts/list.html
@@ -2,7 +2,7 @@
 {% load render_post_elements %}
 
 {% block header %}
-    <h2>List Posts</h2>
+    List Posts
 {% endblock header %}
 
 {% block body %}
@@ -14,7 +14,7 @@
 {% endblock body %}
 
 {% block legend %}
-    <div class="col-3 right-legend align-self-start mt-5">
+    <div class="col-3 right-legend align-self-start">
         <ul class="list-unstyled">
             <li>Join the Site !</li>
             <li>Login !</li>
