--- a/python3/django-projects/BlogProject/templates/messages.html
+++ b/python3/django-projects/BlogProject/templates/messages.html
@@ -1,3 +1,4 @@
+{% block messages %}
 {% if messages %}
     {% for message in messages %}
         <div class="alert {% if message.tags %} alert-{{ message.tags }} {% endif %}alert-dismissible">
@@ -6,6 +7,7 @@
         </div>
     {% endfor %}
 {% endif %}
+{% endblock %}
 
 
 
