--- a/python3/django-projects/BlogProject/templates/nav-header.html
+++ b/python3/django-projects/BlogProject/templates/nav-header.html
@@ -15,6 +15,7 @@
             <ul class="navbar-nav ml-md-auto">
                 {% if user.is_authenticated %}
                     <a href="{% url 'user-profile' user.id %}" class="nav-link">Profile</a>
+                    <a href="{% url 'password_reset' %}" class="nav-link">Reset Password ?</a>
                     <a href="{% url 'logout' %}" class="nav-link">Logout</a>
                 {% else %}
                     <a href="{% url 'login' %}" class="nav-link">Login</a>
