--- a/python3/django-projects/BlogProject/templates/nav-header.html
+++ b/python3/django-projects/BlogProject/templates/nav-header.html
@@ -21,6 +21,7 @@
                     <a href="{% url 'register-user' %}" class="nav-link">Register</a>
                     <a href="{% url 'password_reset' %}" class="nav-link">Reset Password ?</a>
                 {% endif %}
+                <a href="{% url 'admin:index' %}" class="nav-link">Admin</a>
             </ul>
         </div>
     </div>
